fixed spacing on side bar for the ingreidients

--- a/styles/Lasagna.css
+++ b/styles/Lasagna.css
@@ -70,19 +70,30 @@ nav button {
 .main {
     display: flex;
     height: 85vh;
+}
 
 
 
 /* Sidebar */
 .sidebar {
     width: 300px;
-    background-color: var(--colour-2);
+    background-color: var(--colour-4);
     padding: 16px;
     display: flex;
     flex-shrink: 0;
+    flex-direction: column;
+    color: #fff;
+}
+
+.sidebar ul {
+    margin-left: 16px;
 }
 
 .sidebar li {
     font-size: 1.2rem;
+    margin-bottom: 12px;
 }
 
+.sidebar h1 {
+    margin-bottom: 32px;
+}
